# tiders-x402-server

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  context.md  dashboard-spa-plan.md  tiders-dashboards-architecture-draft.md
.github/workflows/: ci.yaml  docs.yml  publish-python.yaml  release.yml
cli/: Cargo.toml
cli-python/: README.md  pyproject.toml
cli/src/: builder.rs  config.rs  env.rs  loader.rs  main.rs  validate.rs  watcher.rs
client-scripts/: .env.example  package-lock.json  package.json  python-client.py  typescript-client.ts
dashboard/: .gitignore  evidence.config.yaml  package-lock.json  package.json
dashboard-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard-frontend/src/: App.tsx  main.tsx
dashboard-frontend/src/api/: catalog.ts  types.ts
dashboard-frontend/src/components/: ChartCard.tsx  ChartGrid.tsx
dashboard-frontend/src/hooks/: useNow.ts
dashboard/components/: ConnectButton.svelte
dashboard/components/lib/: x402Client.ts
dashboard/pages/: +layout.svelte  index.md
dashboard/sources/local_duckdb/: connection.yaml  daily_swaps.sql  overview.sql  pool_activity.sql  swaps_detail.sql
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  introduction.md
docs/src/api/: endpoints.md  payment-protocol.md  response-formats.md
docs/src/architecture/: overview.md  payment-flow.md
docs/src/cli/: cli-overview.md  yaml-reference.md
docs/src/clients/: python.md  typescript.md
docs/src/getting-started/: cli-quickstart.md  configuration.md  installation.md  payment-flow.md  running.md  server-overview.md
docs/src/sdk-library/: sdk-building.md  sdk-configuration.md
docs/src/server/: configuration.md  database.md  duckdb-reader.md  facilitator-client.md  lib.md  payment-config.md  payment-processing.md  price.md  query-handler.md  root-handler.md  sql-generators.md  sql-parser.md  table-detail-handler.md
examples/: seed_clickhouse.sql  seed_postgresql.sql  uniswap_v3_pool_swap.csv
examples/cli/: .env.example  tiders-x402-server.yaml
examples/cli/charts/: daily_volume.js
examples/cli/dashboards/: index.html
examples/cli/dashboards/uniswap_v3/: .tiders-managed.json  evidence.config.yaml  package-lock.json  package.json
examples/cli/dashboards/uniswap_v3/components/: PaidDownloadButton.svelte  PaidDownloadModal.svelte
examples/cli/dashboards/uniswap_v3/components/lib/: walletStore.ts
examples/cli/dashboards/uniswap_v3/pages/: +layout.svelte  index.md
examples/cli/dashboards/uniswap_v3/sources/local_duckdb/: connection.yaml  uniswap_v3_pool_swap.sql
examples/python/: duckdb_server.py
examples/rust/: .env.example  Cargo.toml
examples/rust/duckdb/: Cargo.toml
examples/rust/duckdb/src/: main.rs
examples/rust/postgresql/: .env.example  Cargo.toml
examples/rust/postgresql/src/: main.rs
examples/rust/src/: main.rs
python/: Cargo.toml  pyproject.toml
python/cherry_402_core/: __init__.py
python/example/: duckdb_server.py
python/src/: lib.rs
python/tiders_x402_server/: __init__.py
server/: Cargo.toml  README.md
server/assets/dashboard/: app.css  index.html
server/assets/dashboard/assets/: index-BcphFkDb.js  index-CFCOsiEQ.css  index-ZbM1UFfR.css  index-eFTWHDww.js
server/src/: api_root_handler.rs  database.rs  database_clickhouse.rs  database_duckdb.rs  database_postgresql.rs  duckdb_reader.rs  facilitator_client.rs  info_handler.rs  landing_handler.rs  lib.rs  main.rs  payment_config.rs  payment_processing.rs  price.rs  query_handler.rs  root_handler.rs  sql_clickhouse.rs  sql_duckdb.rs  sql_postgresql.rs  sql_shared.rs  sqp_parser.rs  table_detail_handler.rs
server/src/cli/: builder.rs  config.rs  loader.rs  mod.rs  validate.rs  watcher.rs
server/src/dashboard/: cache.rs  config.rs  handler_dashboard.rs  mod.rs  routes.rs  scaffold.rs  templates.rs
server/src/dashboard/templates/: .gitignore  evidence.config.yaml  landing_page.html  package.json
server/src/dashboard/templates/components/: ConnectButton.svelte  TidersDownloadButton.svelte  TidersDownloadModal.svelte  WalletPicker.svelte
server/src/dashboard/templates/components/lib/: arrowToCsv.ts  eip6963.ts  wagmi.ts  walletStore.ts  x402Client.ts
server/src/dashboard/templates/pages/: +layout.svelte  index.md
typescript-client/: package-lock.json  package.json  testing.ts  tsconfig.json
x402-axum-middleware/: Cargo.toml
x402-axum-middleware/src/: facilitator_client.rs  layer.rs  lib.rs  price.rs
