[workspace]
resolver = "2"
members = [
  "server",
]

[workspace.dependencies]
x402-rs = { version = "0.6.5" }
axum = { version = "0.8.4", features = ["macros"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.0" }
dotenvy = { version = "0.15.7" }
tracing = { version = "0.1.41" }
opentelemetry = { version = "0.29.1" }
tower-http = "0.6.4"
tracing-opentelemetry = "0.30.0"
url = "2.5.4"
duckdb = { version = "1.3.0", features = ["bundled"] }
arrow = { version = "55.1.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
sqlparser = "0.56.0"
tower = { version = "0.5.2" }
http = { version = "1.3.1" }
once_cell = { version = "1.21.3" }
axum-core = { version = "0.5.2" }
reqwest = { version = "0.12.20" }
thiserror = { version = "2.0.12" }
alloy = { version = "1.0.7" }