[workspace]
resolver = "2"
members = [
  "server",
  "python"
]

[workspace.dependencies]
x402-rs = { version = "0.12.5" }
axum = { version = "0.8.8", features = ["macros"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.50.0" }
dotenvy = { version = "0.15.7" }
tracing = { version = "0.1.44" }
opentelemetry = { version = "0.31.0" }
tower-http = "0.6.8"
tracing-opentelemetry = "0.32.1"
url = "2.5.8"
duckdb = { version = "1.10500.0", features = ["bundled"] }
arrow = { version = "57.3.0", features = ["pyarrow"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
sqlparser = "0.61.0"
tower = { version = "0.5.3" }
http = { version = "1.4.0" }
once_cell = { version = "1.21.4" }
axum-core = { version = "0.5.6" }
reqwest = { version = "0.13.2", features = ["json"] }
thiserror = { version = "2.0.18" }
alloy = { version = "1.7.3" }
pyo3 = { version = "0.26", features = ["anyhow"]}
faster-hex = { version = "0.10.0" }