[workspace]
resolver = "2"
members = [
  "server",
  "python",
]
exclude = ["examples/rust"]

[workspace.dependencies]
x402-types = { version = "1.4.4", features = ["telemetry"] }
x402-chain-eip155 = { version = "1.4.4", features = ["server"] }
axum = { version = "0.8.8", features = ["macros"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.50.0", features = ["signal", "rt-multi-thread", "macros"] }
dotenvy = { version = "0.15.7" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-opentelemetry = "0.32.1"
url = "2.5.8"
duckdb = { version = "1.10501.0", features = ["bundled"] }
arrow = { version = "58.1.0", features = ["ipc_compression"] }
arrow-schema = { version = "58.0.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
sqlparser = "0.61.0"
http = { version = "1.4.0" }
reqwest = { version = "0.13.2", features = ["json"] }
thiserror = { version = "2.0.18" }
alloy-primitives = { version = "1.5.7", features = ["serde"] }
pyo3 = { version = "0.28", features = ["anyhow"]}
async-trait = "0.1"
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
clickhouse = "0.13"
postgres-types = { version = "0.2", features = ["with-serde_json-1"] }
bytes = "1"

# ============================================
# Using rust-magic-linter STANDARD PRESET so agents follows rust best practices
# ============================================
# Based on https://github.com/vicnaum/rust-magic-linter

[workspace.lints.clippy]
# Enable pedantic group for comprehensive checks
pedantic = { level = "warn", priority = -1 }

# === THE GUARDRAILS (Critical for AI Agents) ===
# Panic safety - agents must handle errors, not crash
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"

# The "no cheating" rule
allow_attributes = "deny"

# Code hygiene - no debug leftovers
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# === ASYNC SAFETY ===
await_holding_lock = "deny"       # Prevents deadlocks

# === PROCESS SAFETY ===
exit = "deny"                     # Libraries shouldn't exit

# === PEDANTIC RELAXATIONS ===
# These are too noisy for most projects
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
