[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "tiders-x402-server"
version = "0.2.0"
description = "CLI for tiders-x402-server: run a payment-enabled database API server from a YAML config file."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Yulesa", email = "yulesa@gmail.com" },
]
keywords = ["x402", "payments", "api", "database", "cli"]
classifiers = [
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://github.com/yulesa/tiders-x402-server"
Documentation = "https://yulesa.github.io/tiders-x402-server/"
Repository = "https://github.com/yulesa/tiders-x402-server"

[tool.maturin]
bindings = "bin"
manifest-path = "../server/Cargo.toml"
