[package]
name = "tiders-x402-python"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { workspace = true, features = ["anyhow"] }
tiders-x402 = { path = "../server", features = ["pyo3"] }
x402-types = { workspace = true }
x402-chain-eip155 = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true, features = ["full"] }
duckdb = { workspace = true, features = ["bundled"], optional = true }
arrow = { workspace = true, features = ["pyarrow"] }

[features]
duckdb = ["tiders-x402/duckdb", "dep:duckdb"]
postgresql = ["tiders-x402/postgresql"]
clickhouse = ["tiders-x402/clickhouse"]
