[package]
name = "tiders-x402"
version = "0.1.0"
edition = "2024"

[dependencies]
x402-types = { workspace = true }
x402-chain-eip155 = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tower-http = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }
duckdb = { workspace = true, features = ["bundled"], optional = true }
arrow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
sqlparser = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true }
pyo3 = { workspace = true, features = ["anyhow"], optional = true }
faster-hex = { workspace = true }
async-trait = { workspace = true }
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
postgres-types = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
clickhouse = { workspace = true, optional = true }

[features]
duckdb = ["dep:duckdb"]
postgresql = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:postgres-types", "dep:bytes"]
clickhouse = ["dep:clickhouse"]
pyo3 = ["dep:pyo3"]
