[package]
name = "tiders-x402-server"
version = "0.1.1"
edition = "2024"
description = "Payment-enabled database API server that connects different databases with the x402 payment protocol to create a pay-per-query data marketplace."
homepage = "https://github.com/yulesa/tiders-x402-server"
repository = "https://github.com/yulesa/tiders-x402-server"
authors = ["Yulesa <yulesa@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
x402-types = { workspace = true }
x402-chain-eip155 = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tower-http = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }
duckdb = { workspace = true, features = ["bundled"], optional = true }
arrow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
sqlparser = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
alloy-primitives = { workspace = true }
pyo3 = { workspace = true, features = ["anyhow"], optional = true }
async-trait = { workspace = true }
tokio-postgres = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
postgres-types = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
clickhouse = { workspace = true, optional = true }

[features]
duckdb = ["dep:duckdb"]
postgresql = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:postgres-types", "dep:bytes"]
clickhouse = ["dep:clickhouse"]
pyo3 = ["dep:pyo3"]
