[package]
name = "x402-axum-middleware"
version = "0.1.0"
edition = "2024"
description = "Axum middleware for enforcing x402 protocol payments on protected routes"
license = "Apache-2.0"
authors = ["Sergey Ukustov <sergey@ukstv.me>", "Yule <yulesa@gmail.com>"]
homepage = "https://x402.rs"
keywords = ["axum", "middleware", "x402", "payments", "stablecoin"]
categories = ["web-programming::http-server", "authentication", "cryptography", "finance", "network-programming"]
readme = "README.md"

[dependencies]
x402-rs = { workspace = true}
url = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
axum-core = { workspace = true }

# Telemetry
tracing = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }

[features]
default = []
telemetry = ["dep:tracing", "x402-rs/telemetry"]
